# Huffman-encoder-and-decoder

./: CMakeLists.txt  Huffman.cbp  README.md  temp.txt
lib/: combine.cpp  combine.h  decode.cpp  decode.h  encode.cpp  encode.h  encode_decode.cpp  encode_decode.h  reader.cpp  reader.h  tree.cpp  tree.h
test/: testing.cpp
test/files/: large_random.in  mathan.in  overlord.in  small_random.in  twice.in
test/gtest/: gtest-all.cc
util/: console_utility.cpp
